force-app/main/default/objects/Pricebook2/fields/Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Details__c</fullName>
    <description>3rd priority, opportunities with these lead source details will default to this price book if there is no partner specific price book</description>
    <inlineHelpText>3rd priority, opportunities with these lead source details will default to this price book if there is no partner specific price book</inlineHelpText>
    <label>Lead Source Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>AdvisorPro</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Bing Ads</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Envestnet</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
            <value>
                <fullName>flexPATH</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>IOA</fullName>
            </value>
            <value>
                <fullName>Leafhouse</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Member Organization</fullName>
            </value>
            <value>
                <fullName>NFP</fullName>
            </value>
            <value>
                <fullName>OneDigital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>PSIvet</fullName>
            </value>
            <value>
                <fullName>ReachMail</fullName>
            </value>
            <value>
                <fullName>Rep Sourced</fullName>
            </value>
            <value>
                <fullName>Sallus Team</fullName>
            </value>
            <value>
                <fullName>Schwab-CC</fullName>
            </value>
            <value>
                <fullName>Simply Advisor</fullName>
            </value>
            <value>
                <fullName>Simply Direct</fullName>
            </value>
            <value>
                <fullName>Simply TPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>