force-app/main/default/objects/Pricebook2/fields/Lead_Sources__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sources__c</fullName>
    <inlineHelpText>1st priority, opportunities that match a lead source lock to this pricebook</inlineHelpText>
    <label>Lead Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Direct Referral</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Organic Social</fullName>
            </value>
            <value>
                <fullName>Paid Ads</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sallus</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Traditional Payroll</fullName>
            </value>
            <value>
                <fullName>MML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>