force-app/main/default/objects/Pricebook2/fields/Partner_Fee__c.field-meta.xml
<CustomField>
    <fullName>Partner_Fee__c</fullName>
    <label>Partner Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>